--- a/index.html
+++ b/index.html
@@ -27,6 +27,22 @@
     </header>
 
     <main>
+        <section id="card-box">
+            <div class="card-title">
+                <p>Favorite Brands</p>
+                <h2>Your Favorite Brands Food Are Now On Sale</h2>
+            </div>
+            <div class="card-container">
+                <div class="card-img">
+                    <img src="./assets/burger.png" alt="">
+                </div>
+                <div class="card-text">
+                    <p class="title">Pizza Burg</p>
+                    <h4>Up to 50% off</h4>
+                    <p>Contrary to popular belief, Lorem Ipsum is not simply random text.</p>
+                </div>
+            </div>
+        </section>
 
     </main>
 
